syntax = "proto3";
option go_package = "github.com/nam9nine/SSI_Project/protos/vdr";


service VDR {

  rpc RegisterDidDoc(RegisterDidDocReq) returns (RegisterDidDocRes) {}
}

message RegisterDidDocReq {
  string did = 1;
  string didDoc = 2;
}


message RegisterDidDocRes {
  State state = 1;
  string message = 2;
}


enum State {
  UNKNOWN = 0;
  SUCCESS = 1;
  FAILURE = 2;
}
